test/error/iface/err7.rzy
// output of sub-component b is not connected

component
  Sub
    output
      funcA();
      
    implementation elementary
  end

  Err7
    output
      funcA();
      
  implementation composition
    
    component
      a : Sub;
      b : Sub;

    connection
      a.funcA -> funcA;
      
  end

